2007-06-22  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* .hgignore: Update.

	* patches/icedtea-copy-plugs.patch: Remove SnmpSession sections.
	* rt/com/sun/jmx/snmp/SnmpSession.java: Move to...
	* rt/com/sun/jmx/snmp/daemon/SnmpSession.java: New file.

2007-06-22  Francis Kung  <fkung@redhat.com>

	* patches/icedtea-graphics.patch: Remove debug messages.
	* rt/java/awt/color/ICC_Profile.java: Likewise.

2007-06-22  Francis Kung  <fkung@redhat.com>

	* patches/icedtea-ecj-bootstrap.patch: Patch ToBin.java file.
	* patches/icedtea-graphics.patch: Stub out Tracker and Stealer
	code in sun.awt.image.SunWritableRaster.
	* rt/java/awt/color/ICC_Profile.java: Modify for use with Sun's
	pluggable colour management and LittleCMS.
	* rt/java/awt/image/Raster.java: Create Sun-specific Rasters.
	* rt/java/awt/image/WritableRaster.java: Likewise.

2007-06-22  Francis Kung  <fkung@redhat.com>

	* Makefile.in: Regnerated.

2007-06-22  Francis Kung  <fkung@redhat.com>

	* Makefile.am: Specify default openjdk zip file.
	* acinclude.m4: Remove openjdk zip file name constant.
	* Makefile.in: Regenerated.
	* configure: Likewise.

2007-06-22  Gary Benson  <gbenson@redhat.com>

	* icedtea-ports.patch: Update.

2007-06-21  Lillian Angel  <langel@redhat.com>

	* patches/icedtea-ecj-bootstrap.patch: Edited xawt patch for ecj
	3.3.0.

2007-06-21  Kyle Galloway  <kgallowa@redhat.com>

	* acinclude.m4: Added ENABLE_CCACHE option to enable ccache unless
	it is disabled by --disable-ccache, or cannot be found.
	* configure.ac: Use ENABLE_CCACHE macro.
	* Makefile.am: Added conditional ccache patch to ICEDTEA_PATCHES.
	* patches/icedtea-ccache.patch: New file.
	* configure: Regenerated.
	* Makefile.in: Ditto.

2007-06-20  Lillian Angel  <langel@redhat.com>

	* .hgignore: Updated.

2007-06-20  Francis Kung  <fkung@redhat.com>

	* Makefile.am: Clean up fast-build option.
	* acinclude.m4: Likewise.
	* patches/icedtea-speed.patch: Add -g option.
	* Makefile.in: Regenerated.
	* configure: Likewise.
